tests/compiler/es6ImportParseErrors/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.3/tests/cases/compiler/es6ImportParseErrors.ts`, Apache-2.0 License

//@compiler-options: target=es6

import 10; //~ ERROR: Declaration or statement expected.